# poetry-analysis

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Makefile  README.md  demo.ipynb  index.html  metadata.jsonl  mkdocs.yml  norn_poems.jsonl  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.github/actions/setup-pdm-env/: action.yml
.github/workflows/: check.yml  release.yml
api_alliteration/: index.html
api_anaphora/: index.html
api_end_rhymes/: index.html
api_lyrical_subject/: index.html
api_utils/: index.html
demo/: index.html
docs/: api_alliteration.md  api_anaphora.md  api_end_rhymes.md  api_lyrical_subject.md  api_utils.md  demo.ipynb  index.md  modules.md
search/: search_index.json
src/poetry_analysis/: alliteration.py  anaphora.py  rhyme_detection.py  utils.py
tests/: conftest.py
tests/alliteration/: test_alliteration.py  test_stanza_split.py
tests/anaphora/: test_detect_repeating_lines.py  test_extract_line_anaphora.py  test_extract_stanza_anaphora.py  test_find_longest_anaphora.py  test_find_longest_anaphora_in_line.py  test_find_longest_most_frequent_anaphora.py
tests/rhyme_detection/: test_Verse.py  test_find_nucleus.py  test_find_rhyming_line.py  test_get_stanza_from_transcription.py  test_longest_common_substring.py  test_score_orthographic_rhyme.py  test_score_rhyme.py  test_shared_ending_substring.py  test_tag_rhyming_verses.py  test_tag_stanzas.py
tests/utils/: test_utils.py
